Override LakeManager.get_query_set so that it prefetches attributes
The default Lake model manager will prefetch the fishing_zone info, and
construct a list of counties the lake belongs to.

--- a/aol/templates/home/home.html
+++ b/aol/templates/home/home.html
@@ -1,5 +1,8 @@
 <ol>
     {% for lake in lakes %}
-        <li>{{ lake.title }}</li>
+        <li>{{ lake.title }} (<em>{{ lake.counties }}</em>)</li>
     {% endfor %}
 </ol>
+{% for item in sql_queries %}
+    {{ item.sql }}
+{% endfor %}
