--- a/aol/templates/lakes/detail.html
+++ b/aol/templates/lakes/detail.html
@@ -12,4 +12,16 @@
 
 <h2>Basin</h2>
 <img src="{{ lake.basin_tile_url }}" />
+
+{% if photos %}
+<div class="lake-photos">
+    {% for photo in photos %}
+        <div class="lake-photo">
+            {{ photo.url }}
+            <img src="{{ photo.thumbnail_url }}" />
+        </div>
+    {% endfor %}
+</div>
+{% endif %}
+
 {% endblock %}
