--- a/aol/templates/main.html
+++ b/aol/templates/main.html
@@ -4,6 +4,7 @@
         <ul>
             <li><a href="{% url 'home' %}">Home</a></li>
             <li><a href="{% url 'lakes-listing' %}">Lakes</a></li>
+            <li><a href="{% url 'map' %}">Map</a></li>
             <li><a href="{% url 'about' %}">About</a></li>
             <li><a href="{% url 'credits' %}">Credits</a></li>
         </ul>
