template and css work. header, nav, layout, etc

--- a/aol/templates/main.html
+++ b/aol/templates/main.html
@@ -1,16 +1,9 @@
 {% extends "base.html" %}
 {% block body %}
-    {% block header %}
-        <ul>
-            <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="{% url 'lakes-listing' %}">Lakes</a></li>
-            <li><a href="{% url 'about' %}">About</a></li>
-            <li><a href="{% url 'credits' %}">Credits</a></li>
-        </ul>
-    {% endblock %} 
+
+    {% block header %}{% include "header.html"%}{% endblock %} 
 
     {% block content %}{% endblock %}
-
 
     {% block footer %}
         {% if sql_queries %} 
