--- a/static/css/main.css
+++ b/static/css/main.css
@@ -50,11 +50,24 @@ margin: 0px;
 padding: 0px;
 }
 
+a { 
+	text-decoration: none;
+	color: rgb(8, 103, 130);
+}
+
+a:visited {
+	color: grey;
+}
+
+a:hover {
+	color: rgb(8, 103, 130);
+	text-decoration: underline;
+}
 input {
 	font-size: 16px;
 	}
 
-div.block-wrap {
+.wrap {
 	padding:20px;
 	}
 
@@ -111,6 +124,9 @@ ul.nav li a {
 	border-radius: 4px;
 	background: white;
 	}
+
+li.odd {
+	background: rgb(248, 248, 248);}
 
 /*home page styles*/
 #home-row1{
