template change navigation

--- a/aol/templates/navigation.html
+++ b/aol/templates/navigation.html
@@ -3,6 +3,7 @@
 	<ul class='nav'>
 		<li><a href="{% url 'home' %}">Home</a></li>
         <li><a href="{% url 'lakes-listing' %}">Lakes</a></li>
+        <li><a href="{% url 'map' %}">Interactive Map</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
         <li><a href="{% url 'credits' %}">Credits</a></li>
     </ul>
