changes to templates

--- a/aol/templates/home/home.html
+++ b/aol/templates/home/home.html
@@ -13,7 +13,7 @@
 			</div>
 		<div class ='right span7'>
 			<div class='wrap'>
-				<img src="{{ STATIC }}/media/photos/thumbnail-DEQ_AOL-0053.jpg">
+				<img src="/media/photos/thumbnail-DEQ_AOL-0053.jpg">
 				<p>If you would like your photos of Oregon lakes featured in the online atlas, <a href="/photo-submissions">click here</a> for submission criteria.
 				</p>
 			</div>
@@ -29,14 +29,14 @@
 		<div class ='right span8'>
 		<div id='r2c2' class='wrap'>
 			<div class='span2'>
-				<img src="{{STATIC }}static/img/lake_1.jpg">
+				<img src="{{STATIC_URL }}img/lake_1.jpg">
 			</div>
 			<div class='span9 block wrap'>
 				<h2>Individual Lakes Pages</h2>
 				<p>Discover the rich diversity of Oregon’s lakes—learn about the current and historical topography, environmental relationships, and recreational and practical uses. View photos, water quality plots, and download resources including the original 1985 print atlas pages.</p>
 			</div>
 			<div class='span2'>
-				<img src="{{ STATIC }}static/img/map_1.png">
+				<img src="{{ STATIC_URL }}img/map_1.png">
 			</div>
 			<div class='span9 block wrap'>
 				<h2> Interactive Map</h2>
