--- a/aol/templates/base.html
+++ b/aol/templates/base.html
@@ -4,6 +4,7 @@
         <title>{% block title %}{% endblock %} - Atlas of Oregon Lakes</title>
         <script type="text/javascript" src="{{ STATIC_URL }}/js/jquery-1.10.2.min.js"></script>
         <link href="{{ STATIC_URL }}css/main.css" rel="stylesheet" media="screen">
+		<link rel="icon" type="image/png" href="{{ STATIC_URL }}img/aol_favicon.png"/>
     </head>
     <body>
         {% block body %}{% endblock %}
