lake search implemented; incomplete test

--- a/aol/templates/lakes/results.html
+++ b/aol/templates/lakes/results.html
@@ -2,13 +2,14 @@
 {% block content %}
 <div class= 'wrap' >
 	<h2>Search Results for: <i>{{ query }}</i></h2>
-    {% if error %}
-        <p style="color: red;">Sorry, no lakes were found.</p>
-    {% endif %}	
-    <form action='/search/' method='get'>
+    
+    <form class='wrap' ction='/search/' method='get'>
         <input type='text' name='q' value= {{ query }} autofocus></input>
         <input type='submit' value='Lake Search'></input>
     </form>
+    {% if error %}
+        <p class='wrap' style="color: red;">Sorry, no lakes were found.</p>
+    {% endif %}	
     <ol class='wrap'>
 		{% for lake in lakes %}
 			<li class="{% cycle 'odd' 'even' %}" ><a href="{% url 'lakes-detail' reachcode=lake.reachcode %}">{{ lake.title }}</a> (<em>{{ lake.counties }}</em>)</li>
