wrapped logo in link tag

--- a/aol/templates/header.html
+++ b/aol/templates/header.html
@@ -3,7 +3,9 @@
 	<div id='header' class='span12 block'>
 		<div id='branding' class='block left span8' >
 			<div id='logo-wrap' class='block span2 left' >
-				<img id='logo' src='{{ STATIC_URL }}img/aol_logo.png' ></img>
+				<a href='/'>
+                    <img id='logo' src='{{ STATIC_URL }}img/aol_logo.png' ></img>
+                </a>
 			</div>
 			<div id='site-title' class='block span9 left' >
 				<a href='/'>Atlas of Oregon Lakes</a>
