about page and photo submissions page

--- a/aol/templates/home/about.html
+++ b/aol/templates/home/about.html
@@ -1,4 +1,21 @@
 {% extends "main.html" %}
 {% block content %}
-<h1>About</h1>
+<div class='wrap'>
+    <h1>About <img class='wrap'style="float: right;" src="http://aol.research.pdx.edu/sites/default/files/images.jpeg" alt="" width="325" height="245"></h1>
+    <div class='wrap'id='about-content' >
+        <p>The Atlas of Oregon Lakes is a resource for the public, resource management agencies, and scientists to enhance management and enjoyment of our lakes. The online atlas is an updated version of the popular <em>Atlas of Oregon Lakes</em> published in 1985.</p>
+        <br>
+        <p>The  online atlas highlights lake and reservoir water data stored within the <a href="http://deq12.deq.state.or.us/pnwwqx/" target="_blank">Pacific Northwest Water Quality Data Exchange</a> (PNWWQX). The PNWWQX collaborates between a variety of information management projects to facilitate the aggregation of and access to a comprehensive source of data related to water quality in the Pacific Northwest. The PNWWQX was initiated by funds allocated from the EPA Exchange Network Grant program.</p>
+        <br>
+        <p>The online Atlas of Oregon Lakes was developed by Portland State University's <a href="http://www.clr.pdx.edu/" target="_blank">Center for Lakes and Reservoirs</a>, <a href="http://www.pdx.edu/geography/center-for-spatial-analysis-and-research" target="_blank">Center for Spatial Analysis and Research</a>, <a href="http://pdx.edu/usp/" target="_blank">Nohad A. Toulan School of Urban Studies and Planning</a>, and <a href="http://www.pdx.edu/oit/research-computing" target="_blank">Academic and Research Computing</a>. Funding was provided through an EPA Exchange Network Grant administered by Oregon DEQ and through contributions from Portland State University.</p>
+        <br><h2>Organization of the Atlas</h2>
+        <p>The online Atlas of Oregon Lakes is organized into two platforms... <a>Read more</a></p>
+        <br><h2> Water Quality Assessments</h2>
+        <p>Water quality assessments for the lakes and reservoirs are primarily based on data housed within the... <a>Read more</a></p>
+        <br><h2>Contributors</h2>
+        <p>The online Atlas of Oregon Lakes was developed by... <a>Read more</a></p>
+        <br><h2>Contact</h2>
+        <p>The Center for Lakes and Reservoirs at Portland State University invites viewers... <a>Read more</a></p>
+    </div>
+</div>
 {% endblock %} 
