--- a/static/css/main.css
+++ b/static/css/main.css
@@ -119,7 +119,8 @@ ul.nav li a {
 	border: 1px solid grey;
 	border-radius: 4px;
 	background: white;
-	}
+	min-height: 400px;
+ }
 
 li.odd {
 	background: rgb(248, 248, 248);}
