--- a/aol/templates/home/credits.html
+++ b/aol/templates/home/credits.html
@@ -1,4 +1,37 @@
 {% extends "main.html" %}
 {% block content %}
-<h1>Credits</h1>
+<div class='wrap'>
+    <h1>Credits</h1>
+    <br>
+    <h2>Map Credits (general)</h2>
+    <ul class='wrap'>
+        <li>Major roads from Oregon Department of Transportation.</li>
+        <li>Non-state roads from Oregon Department of Transportation and Census T2009 TIGER files.</li>
+        <li>Local roads from US Bureau of the Census, 2009 TIGER Files.</li>
+        <li>Railways from US Bureau of Transportation Statistics.</li>
+        <li>Airfields from US Bureau of Transportation Statistics.</li>
+        <li>Large scale stream data from United States Geologic Survey and the National Hydrologic Database High, 2006-2011.</li>
+        <li>Small scale stream data from Environmental Protection Agency and the National Hydrologic Database Plus, 2006-2010.</li>
+        <li>Lake shoreline polygons from United States Geologic Survey and National Hydrologic Database High, 2006-2011.</li>
+        <li>Political boundaries from US Bureau of the Census, mapping for 2010 Census.</li>
+        <li>Lake watersheds from delineation of ten meter DEMs and from National Hydrologic Database Plus catchments and the Watershed Boundary Database.</li>
+        <li>Shaded relief derived from ten meter DEM.</li>
+        <li>Land cover type from National Land Cover Database (NLCD) 2006.</li>
+        <li>Oregon public land ownership from US Bureau of Land Management from Oregon GEO as well as from Oregon State Parks.</li>
+        <li>Public land ownership outside Oregon from various state and federal sources.</li>
+    </ul>
+    <h2>Map Credits (bathymetric)</h2> 
+    <ul class='wrap'>
+        <li>1985 Atlas of Oregon Lakes</li>
+        <li>Portland State University Center for Lakes and Reservoirs</li>
+        <li>National Agricultural Inventory Program</li>
+        <li>Oregon Department of Fish and Wildlife</li>
+        <li>Portland State University</li>
+        <li>US Soil and Conservation Service</li>
+        <li>US Geological Survey</li>
+        <li>US Army Corps of Engineers</li>
+        <li>US Bureau of Reclamation</li>
+        <li>US Forest Service</li>
+    </ul>
+</div>
 {% endblock %} 
