--- a/static/css/main.css
+++ b/static/css/main.css
@@ -122,7 +122,7 @@ ul.nav li a {
 	border: 1px solid grey;
 	border-radius: 4px;
 	background: white;
-	min-height: 400px;
+	min-height: 600px;
  }
 
 li.odd {
@@ -149,3 +149,53 @@ li.odd {
 #r2c2 img { border: solid 2px grey; 
 			margin-bottom: 5px;
 			}
+
+/* lake pages */
+.lake-body {
+    margin-top: 20px;
+    }
+
+ul.tabs {
+border-bottom: solid 1px grey;}
+
+ul.tabs li {
+    display: inline-block;
+    padding-left: 5px;
+    padding-right: 5px;
+    background: grey;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+}
+
+ul.tabs li.active {
+    background:rgb(248, 248, 248);
+    border: solid 1px grey;
+}
+
+a.tabs, a.tabs active {
+    color:black;
+    }
+.aside {
+    display:none;
+}
+
+.lake-right {
+    display:block;
+    min-height: 480px;
+}
+
+#maps {
+    display:block;
+}
+
+
+.lake-watershed {
+}
+
+.lake-waterbasin {
+}
+
+.other-information {
+
+.lake-photos{
+}
