--- a/aol/templates/lakes/listing.html
+++ b/aol/templates/lakes/listing.html
@@ -2,10 +2,10 @@
 {% block content %}
 <div class= 'wrap' >
 	<h2>Individual Lake Pages</h2>
-	<ol class='wrap'>
+	<ul class='wrap'>
 		{% for lake in lakes %}
 			<li class="{% cycle 'odd' 'even' %}" ><a href="{% url 'lakes-detail' reachcode=lake.reachcode %}">{{ lake.title }}</a> (<em>{{ lake.counties }}</em>)</li>
 		{% endfor %}
-	</ol>
+	</ul>
 </div>
 {% endblock %}
