--- a/static/css/main.css
+++ b/static/css/main.css
@@ -170,6 +170,7 @@ ul.tabs li {
 ul.tabs li.active {
     background:rgb(248, 248, 248);
     border: solid 1px grey;
+    border-bottom: none;
 }
 
 a.tabs, a.tabs active {
@@ -178,6 +179,7 @@ a.tabs, a.tabs active {
 
 .aside {
     display:none;
+    margin-top: 8px;
 }
 
 .lake-right {
@@ -211,3 +213,53 @@ a.tabs, a.tabs active {
 .lake-photo img {
     width: 400px;
     }
+
+#photos {
+    position:relative;
+}
+/*
+#previous {
+    position:absolute;
+    top: 0px;
+    left: 0px;
+    height: 350px;
+    width: 53px;
+    opacity: 0;
+}
+
+#next {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    height: 350px;
+    width: 53px;
+    opacity: 0;
+}
+
+#next:hover, #previous:hover {
+    opacity: 0.7;
+}
+ 
+#previous img {
+    position: absolute;
+    top: 100px;
+    left:0px;
+    }
+#next img {
+    position:absolute;
+    top: 100px;
+    right: 0px;
+}
+*/
+#previous img{ 
+    padding: 5px 5px 5px 0px;
+}
+
+#next img {
+    padding: 5px 0px 5px 5px;
+}
+
+#numphotos {
+    float: right;
+    padding: 15px;
+}
