--- a/static/css/main.css
+++ b/static/css/main.css
@@ -217,40 +217,11 @@ a.tabs, a.tabs active {
 #photos {
     position:relative;
 }
-/*
-#previous {
-    position:absolute;
-    top: 0px;
-    left: 0px;
-    height: 350px;
-    width: 53px;
-    opacity: 0;
-}
 
-#next {
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    height: 350px;
-    width: 53px;
-    opacity: 0;
-}
-
-#next:hover, #previous:hover {
-    opacity: 0.7;
-}
- 
-#previous img {
-    position: absolute;
-    top: 100px;
-    left:0px;
+#photo-wrap{
+    height: 275px;
     }
-#next img {
-    position:absolute;
-    top: 100px;
-    right: 0px;
-}
-*/
+
 #previous img{ 
     padding: 5px 5px 5px 0px;
 }
