Added stub for displaying django messages

--- a/aol/templates/main.html
+++ b/aol/templates/main.html
@@ -3,7 +3,15 @@
 
     {% block header %}{% include "header.html"%}{% endblock %} 
 	<div id='content' class='max'>
-    {% block content %}{% endblock %}
+        {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+
+        {% block content %}{% endblock %}
 	</div>
     {% block footer %}
         {% if sql_queries %} 
