Start work on admin stuff * Created admin views module * Created form to edit lakes * Made the form not look so awful * Tests (of course)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -234,3 +234,24 @@ a.tabs, a.tabs active {
     float: right;
     padding: 15px;
 }
+
+
+/* forms control */
+label {
+    display:block;
+    font-weight:bold;
+    margin-top:10px;
+}
+
+input, select, textarea {
+    display:block;
+}
+
+textarea {
+    width:800px;
+    height:500px;
+}
+
+aside {
+    float:right;
+}
